tests/baselines/reference/parserComputedPropertyName27.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName27.ts(4,9): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName27.ts(4,6): error TS2304: Cannot find name 'e2'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName27.ts (2 errors) ====
    class C {
        // No ASI
        [e]: number = 0
        [e2]: number
            ~
!!! error TS1005: ';' expected.
         ~~
!!! error TS2304: Cannot find name 'e2'.
    }